--- a/app/views/users/logix/groups.html.erb
+++ b/app/views/users/logix/groups.html.erb
@@ -27,6 +27,13 @@
       <% @groups_mentored.each do |group| %>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
           <div class="groups-card groups-mentor-card">
+            <%# show a logo if the group imported from an lms %>
+              <% if group.lmstype == "moodle" %>
+                <div class="mini-button groups-mentor-card-view-mini-lmslogo">
+                  <%= image_tag("lms/moodle/moodle-rounded.png", alt: "View Group") %>
+                </div>
+              <% end %>
+            <%# logo end %>
             <div class="groups-mentor-card-name"><%= group.name %></div>
             <div>
               <p>Total Members: <%= group.group_member_count %></p>
