--- a/app/views/lti/launch_error.html.erb
+++ b/app/views/lti/launch_error.html.erb
@@ -12,7 +12,7 @@
   <div class="col-12">
     <h1 class="main-heading">Something Error Happend</h1>
     <div class="teacher-main-description-container">
-      <p class="main-description">The content you are requesting is not available at this moment</p>
+      <p class="main-description">The content you are requesting is not available at this moment, or you are not authorized to access the content.</p>
     </div>
   </div>
 </div>
