--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -61,6 +61,11 @@
           <td>
             <div class="groups-assignment-details groups-expanded-assignment-name">
               <%= assignment.name %>
+              <% if policy(@group).admin_access? && assignment.lti_integrated? %>
+                <br>
+                <a data-toggle="modal" href="#lmscredentialsModal-<%=assignment.id%>">Show LMS Credentials</a>
+                <%= render partial: "lms_credentials_modal", locals: {assignment: assignment}%>
+              <% end %>
             </div>
           </td>
           <td>
