--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -41,7 +41,7 @@
 
 .groups-expanded-assignment-name {
   margin-left: 8px;
-  max-width: 100px;
+  max-width: 180px;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -56,6 +56,11 @@
 
 .groups-assignment-button-container {
   min-width: 190px;
+}
+
+.groups-copy-lms-credentials-button {
+  margin-left: 5;
+  padding: 2px 6px;
 }
 
 .groups-view-mini-button {
@@ -439,5 +444,9 @@
 .groups-member-card-button {
   margin-top: 20px;
   padding: 5px 10px;
+}
+
+.groups-showlmscredentialsmodal-links-text {
+  display: inline;
 }
 //groups ends
