--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -58,11 +58,6 @@
   min-width: 190px;
 }
 
-.groups-copy-lms-credentials-button {
-  margin-left: 5;
-  padding: 2px 6px;
-}
-
 .groups-view-mini-button {
   background-color: $primary-green;
   cursor: pointer;
@@ -446,7 +441,13 @@
   padding: 5px 10px;
 }
 
-.groups-lmsmodal-link-text {
-  display: inline;
+.groups-lms-modal {
+  .link-text {
+    display: inline;
+  }
+  .copy-credentials-button {
+    margin-left: 5;
+    padding: 2px 6px;
+  }
 }
 //groups ends
